리팩토링, 기능이름 정리

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_BACK_URL = 'http://intra.tomato-pos.com:33062'
-VITE_BACK_WSURL = 'ws://intra.tomato-pos.com:33062'
+VITE_BACK_URL = 'https://intra2.tomato-pos.com'
+VITE_BACK_WSURL = 'wss://intra2.tomato-pos.com'
