--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -23,6 +24,7 @@
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
     "prettier": "^3.0.0",
+    "rollup-plugin-copy": "^3.5.0",
     "vite": "^4.4.9"
   }
 }
