--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
-    "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "uuid": "^9.0.1",
     "vue": "^3.3.4",
