--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_BACK_URL = 'https://intra2.tomato-pos.com'
 VITE_BACK_WSURL = 'wss://intra2.tomato-pos.com'
-VITE_NOTI_ICON = './noti_icon.jpg'
+VITE_NOTI_ICON = './noti_icon.svg'
