--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/vue3": "^6.1.9",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
@@ -24,9 +28,9 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
-    "cross-env": "^7.0.3",
     "prettier": "^3.0.0",
     "rollup-plugin-copy": "^3.5.0",
     "vite": "^4.4.9"
