--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
     "@fullcalendar/vue3": "^6.1.9",
+    "@vuepic/vue-datepicker": "^7.1.0",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
