--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.3.1",
     "noty": "^3.2.0-beta-deprecated",
     "pinia": "^2.1.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "vite-plugin-mkcert": "^1.16.0",
     "vue": "^3.3.4",
